Добавляет элемент intro-inner блока main на страницу конкурса

--- a/source/form.html
+++ b/source/form.html
@@ -35,7 +35,7 @@
     </header>
     <main class="main">
       <h1 class="visually-hidden">Конкурс мобильного приложения Pink</h1>
-      <section class="intro-inner wrapper">
+      <section class="intro-inner main__intro-inner">
         <h2 class="intro-inner__title">Конкурс на самое безбашенное путешествие с Пинк</h2>
       </section>
       <section class="competition">
