Добавляет выравнивание текста внутри competition__header

--- a/source/form.html
+++ b/source/form.html
@@ -40,7 +40,7 @@
       </section>
       <section class="competition">
         <h2 class="visually-hidden">Форма для участия в конкурсе</h2>
-        <header class="competition__header wrapper">
+        <header class="competition__header">
           <p class="competition__description">Поделитесь своей историей и получите шанс выиграть ценный приз — 1000 миль на вашу бонусную карту!</p>
         </header>
         <form class="form" action="https://echo.htmlacademy.ru" method="POST">
