--- a/source/form.html
+++ b/source/form.html
@@ -9,7 +9,7 @@
   </head>
   <body class="page">
     <header class="header">
-      <svg class="header__logo logo logo--white-text" width="75" height="23" aria-label="Логотип мобильного приложения Pink"><use xlink:href="img/sprite.svg#logo-pink-white-mobile"></use></svg>
+      <svg class="header__logo logo logo--header-color" width="75" height="23" aria-label="Логотип мобильного приложения Pink"><use xlink:href="img/sprite.svg#logo-pink-white-mobile"></use></svg>
       <button class="menu-burger" type="button" aria-label="Кнопка открытия выпадающего меню">
         <svg class="menu-burger__icon" width="49" height="24"><use xlink:href="img/sprite.svg#icon-menu-burger"></use></svg>
       </button>
