Добавляет названия переменных и определяет переменные в блоках

--- a/source/form.html
+++ b/source/form.html
@@ -63,7 +63,7 @@
               </ul>
             </div>
           </fieldset>
-          <fieldset class="form__fieldset form__fieldset--gray">
+          <fieldset class="form__fieldset form__fieldset--background-color">
             <div class="wrapper">
               <h3 class="form__legend">Ваши безбашенные<br> достижения в путешествии</h3>
               <ul class="form__list">
@@ -109,7 +109,7 @@
               </ul>
             </div>
           </fieldset>
-          <fieldset class="form__fieldset form__fieldset--gray">
+          <fieldset class="form__fieldset form__fieldset--background-color">
             <div class="wrapper">
               <h3 class="form__legend">С каким приложением путешествовали?</h3>
               <ul class="form__list">
