--- a/source/form.html
+++ b/source/form.html
@@ -193,9 +193,11 @@
         <h2 class="modal__title">Ваша заявка отправлена</h2>
         <p class="modal__description">Спасибо за ваше участие, ваша заявка уже поступила к нам. В ближайшее время мы рассмотрим ее<br> и оповестим вас.</p>
       </div>
-      <p class="modal__button">
-        <button class="button" type="button">Закрыть окно</button>
-      </p>
+      <div class="modal__button">
+        <p class="wrapper">
+          <button class="button" type="button">Закрыть окно</button>
+        </p>
+      </div>
       </section>
   </body>
 </html>
