--- a/source/index.html
+++ b/source/index.html
@@ -9,35 +9,39 @@
   </head>
   <body class="page">
     <header class="header">
-      <svg class="header__logo logo logo--header-color" width="75" height="23" aria-label="Логотип мобильного приложения Pink">
-        <use xlink:href="img/sprite.svg#logo-pink-white-mobile"></use>
-      </svg>
-      <button class="menu-burger" type="button" aria-label="Кнопка открытия выпадающего меню">
-        <svg class="menu-burger__icon" width="49" height="24">
-          <use xlink:href="img/sprite.svg#icon-menu-burger"></use>
-        </svg>
-      </button>
-      <nav class="main-nav">
-        <button class="main-nav__close" type="button" aria-label="Кнопка закрытия выпадающего меню">
-          <svg class="main-nav__close-icon" width="24" height="24">
-            <use xlink:href="img/sprite.svg#icon-menu-cross"></use>
+      <div class="header__wrapper-desktop">
+        <div class="header__wrapper">
+          <svg class="header__logo logo logo--header-color" width="75" height="23" aria-label="Логотип мобильного приложения Pink">
+            <use xlink:href="img/sprite.svg#logo-pink-white-mobile"></use>
           </svg>
-        </button>
-        <ul class="main-nav__list menu-list">
-          <li class="menu-list__item menu-list__item--active">
-            <a class="menu-list__link" href="#">Главная</a>
-          </li>
-          <li class="menu-list__item">
-            <a class="menu-list__link" href="photo.html">Фотографии</a>
-          </li>
-          <li class="menu-list__item">
-            <a class="menu-list__link" href="form.html">Конкурс</a>
-          </li>
-          <li class="menu-list__item">
-            <a class="menu-list__link" href="#">Html Academy</a>
-          </li>
-        </ul>
-      </nav>
+          <button class="menu-burger" type="button" aria-label="Кнопка открытия выпадающего меню">
+            <svg class="menu-burger__icon" width="49" height="24">
+              <use xlink:href="img/sprite.svg#icon-menu-burger"></use>
+            </svg>
+          </button>
+        </div>
+        <nav class="main-nav">
+          <button class="main-nav__close" type="button" aria-label="Кнопка закрытия выпадающего меню">
+            <svg class="main-nav__close-icon" width="24" height="24">
+              <use xlink:href="img/sprite.svg#icon-menu-cross"></use>
+            </svg>
+          </button>
+          <ul class="main-nav__list menu-list">
+            <li class="menu-list__item menu-list__item--active">
+              <a class="menu-list__link" href="#">Главная</a>
+            </li>
+            <li class="menu-list__item">
+              <a class="menu-list__link" href="photo.html">Фотографии</a>
+            </li>
+            <li class="menu-list__item">
+              <a class="menu-list__link" href="form.html">Конкурс</a>
+            </li>
+            <li class="menu-list__item">
+              <a class="menu-list__link" href="#">Html Academy</a>
+            </li>
+          </ul>
+        </nav>
+      </div>
     </header>
     <main class="main">
       <h1 class="visually-hidden">Главная страница мобильного приложения Pink</h1>
