Выстраивает адаптивную сетку блока intro

--- a/source/index.html
+++ b/source/index.html
@@ -48,7 +48,7 @@
       <section class="intro">
         <h2 class="visually-hidden">Где скачать приложение?</h2>
         <article class="intro__download app">
-          <div class="wrapper">
+          <div class="intro__wrapper">
             <h3 class="visually-hidden">Способы скачать приложение</h3>
             <a class="app__link link" href="#">Скачать приложение</a>
             <ul class="app__list store-list">
