Корректирует адаптивную сетку блока information

--- a/source/index.html
+++ b/source/index.html
@@ -73,23 +73,27 @@
             <p class="information__text">Устали от серости мегаполиса?</p>
             <p class="information__text">Нам есть, что вам предложить!</p>
           </header>
-          <div class="information__wrapper">
-            <ul class="information__list">
-              <li class="information__item">
-                <h3 class="information__title">Поднимает настроение</h3>
-                <p class="information__description">Приложение позволит вам победить осеннюю хандру и депрессию буквально в несколько кликов!</p>
-              </li>
-              <li class="information__item">
-                <h3 class="information__title">Меняет мир вокруг</h3>
-                <p class="information__description">Сделайте снимок и украсьте его смайликом или текстовой подписью, чтобы усилить эффект</p>
-              </li>
-              <li class="information__item">
-                <h3 class="information__title">Заводит новых друзей</h3>
-                <p class="information__description">Ставьте лайки, комментируйте, делитесь фотографиями с друзьями и заводите новых</p>
-              </li>
-            </ul>
-            <div class="information__img"></div>
-          </div>
+          <ul class="information__list">
+            <li class="information__item">
+              <h3 class="information__title">Поднимает настроение</h3>
+              <p class="information__description">Приложение позволит вам победить осеннюю хандру и депрессию буквально в несколько кликов!</p>
+            </li>
+            <li class="information__item">
+              <h3 class="information__title">Меняет мир вокруг</h3>
+              <p class="information__description">Сделайте снимок и украсьте его смайликом или текстовой подписью, чтобы усилить эффект</p>
+            </li>
+            <li class="information__item">
+              <h3 class="information__title">Заводит новых друзей</h3>
+              <p class="information__description">Ставьте лайки, комментируйте, делитесь фотографиями с друзьями и заводите новых</p>
+            </li>
+          </ul>
+          <footer class="information__footer effect">
+            <div class="effect__wrapper">
+              <p class="effect__title">Эффект на 24 часа!</p>
+              <p class="information__description">Британские ученые провели исследования и доказали, что положительный эффект от использования приложения длится целые сутки!</p>
+              <a class="effect__link" href="#">Узнать больше об исследовании</a>
+            </div>
+          </footer>
         </div>
       </section>
       <section class="reviews">
