--- a/source/index.html
+++ b/source/index.html
@@ -100,20 +100,20 @@
         <h2 class="visually-hidden">Отзывы пользователей</h2>
         <div class="wrapper slider">
           <div class="reviews__list slider__list">
-            <blockquote class="reviews__item slider__item">
+            <blockquote class="reviews__item reviews__item--active slider__item">
+              <p class="reviews__author-info">25 лет, водитель трамвая</p>
               <cite class="reviews__author-name">Николай Петров</cite>
-              <p class="reviews__quote">«Это приложение перевернуло мой мир и позволило по-новому взглянуть на привычные серые вещи! А еще я познакомился
-                со своей будущей женой в комментариях к выложенной фотографии!»</p>
+              <p class="reviews__quote">«Это приложение перевернуло мой мир и позволило по-новому взглянуть на привычные серые вещи! А еще я познакомился со своей будущей женой в комментариях к выложенной фотографии!»</p>
             </blockquote>
             <blockquote class="reviews__item slider__item">
+              <p class="reviews__author-info">25 лет, водитель трамвая</p>
               <cite class="reviews__author-name">Николай Петров</cite>
-              <p class="reviews__quote">«Это приложение перевернуло мой мир и позволило по-новому взглянуть на привычные серые вещи! А еще я познакомился
-                со своей будущей женой в комментариях к выложенной фотографии!»</p>
+              <p class="reviews__quote">«Это приложение перевернуло мой мир и позволило по-новому взглянуть на привычные серые вещи! А еще я познакомился со своей будущей женой в комментариях к выложенной фотографии!»</p>
             </blockquote>
             <blockquote class="reviews__item slider__item">
+              <p class="reviews__author-info">25 лет, водитель трамвая</p>
               <cite class="reviews__author-name">Николай Петров</cite>
-              <p class="reviews__quote">«Это приложение перевернуло мой мир и позволило по-новому взглянуть на привычные серые вещи! А еще я познакомился
-                со своей будущей женой в комментариях к выложенной фотографии!»</p>
+              <p class="reviews__quote">«Это приложение перевернуло мой мир и позволило по-новому взглянуть на привычные серые вещи! А еще я познакомился со своей будущей женой в комментариях к выложенной фотографии!»</p>
             </blockquote>
           </div>
           <p class="reviews__toggles slider__toggles">
