Выстраивает адаптивную сетку блока tariff-selection

--- a/source/index.html
+++ b/source/index.html
@@ -129,6 +129,7 @@
           <table class="price__list tariff-selection">
             <caption class="visually-hidden">Тарифы и стоимость</caption>
             <tr class="tariff-selection__item">
+              <th class="tariff-selection__cell-hidden"></th>
               <th class="tariff-selection__cell-header">
                 <b class="tariff-selection__cell tariff-selection__cell--tariff">База</b>
                 <p class="tariff-selection__cell tariff-selection__cell--cost">1,99 usd</p>
@@ -146,13 +147,16 @@
               <td class="tariff-selection__cell-option">Розовый фильтр</td>
               <td class="tariff-selection__cell-option">Розовый фильтр</td>
               <td class="tariff-selection__cell-option">Розовый фильтр</td>
+              <td class="tariff-selection__cell-option">Розовый фильтр</td>
             </tr>
             <tr class="tariff-selection__item">
               <td class="tariff-selection__cell-option">Смайлики</td>
               <td class="tariff-selection__cell-option">Смайлики</td>
               <td class="tariff-selection__cell-option">Смайлики</td>
+              <td class="tariff-selection__cell-option">Смайлики</td>
             </tr>
             <tr class="tariff-selection__item">
+              <td class="tariff-selection__cell-option">Комментарии</td>
               <td class="tariff-selection__cell-option">Комментарии</td>
               <td class="tariff-selection__cell-option">Комментарии</td>
               <td class="tariff-selection__cell-option">Комментарии</td>
