--- a/source/index.html
+++ b/source/index.html
@@ -178,13 +178,13 @@
               <h3 class="contacts__title">Звоните:</h3>
               <a class="contacts__link" href="tel:+78125556666">+7 (812) 555-66-66</a>
             </li>
-            <li class="contacts__item">
+            <li class="contacts__item contacts__item--position">
               <h3 class="contacts__title">Пишите:</h3>
               <a class="contacts__link" href="mailto:mail@htmlacademy.ru">mail@htmlacademy.ru</a>
             </li>
             <li class="contacts__item">
               <h3 class="contacts__title">Приезжайте в гости:</h3>
-              <address class="contacts__link">ул. Большая Конюшенная, 19/8</address>
+              <address class="contacts__link">ул. Большая<br> Конюшенная, 19/8</address>
             </li>
           </ul>
         </div>
