Выстраивает адаптивную сетку блока footer для мобильной версии

--- a/source/photo.html
+++ b/source/photo.html
@@ -190,7 +190,7 @@
       </section>
     </main>
     <footer class="footer">
-      <div class="wrapper">
+      <div class="footer__wrapper">
         <svg class="footer__logo logo logo--pink-blue" width="146" height="40" aria-label="Логотип мобильного приложения Pink">
           <use xlink:href="img/sprite.svg#logo-pink-blue-mobile"></use>
         </svg>
