--- a/source/form.html
+++ b/source/form.html
@@ -153,7 +153,7 @@
       </section>
     </main>
     <footer class="footer">
-      <div class="wrapper">
+      <div class="footer__wrapper">
         <svg class="footer__logo logo logo--pink-blue" width="146" height="40" aria-label="Логотип мобильного приложения Pink"><use xlink:href="img/sprite.svg#logo-pink-blue-mobile"></use></svg>
         <ul class="footer__list social-list">
           <li class="social-list__item">
