--- a/source/index.html
+++ b/source/index.html
@@ -196,7 +196,7 @@
       </article>
     </main>
     <footer class="footer">
-      <div class="wrapper">
+      <div class="footer__wrapper">
         <svg class="footer__logo logo logo--pink-blue" width="146" height="40" aria-label="Логотип мобильного приложения Pink">
           <use xlink:href="img/sprite.svg#logo-pink-blue-mobile"></use>
         </svg>
