Выстраивает адаптивную сетку блока footer для планшетной и десктопной версий

--- a/source/form.html
+++ b/source/form.html
@@ -152,7 +152,7 @@
         </footer>
       </section>
     </main>
-    <footer class="footer">
+    <footer class="footer page__footer">
       <div class="footer__wrapper">
         <svg class="footer__logo logo logo--pink-blue" width="146" height="40" aria-label="Логотип мобильного приложения Pink"><use xlink:href="img/sprite.svg#logo-pink-blue-mobile"></use></svg>
         <ul class="footer__list social-list">
