--- a/source/index.html
+++ b/source/index.html
@@ -195,7 +195,7 @@
         <img class="map__img" src="img/bg-map-mobile@1x.png" width="320" height="645" alt="Наш офис находится по адресу г.Санкт-Петербург, ул. Большая Конюшенная, д.19/8 ">
       </article>
     </main>
-    <footer class="footer">
+    <footer class="footer footer--mobile-hidden page__footer">
       <div class="footer__wrapper">
         <svg class="footer__logo logo logo--pink-blue" width="146" height="40" aria-label="Логотип мобильного приложения Pink">
           <use xlink:href="img/sprite.svg#logo-pink-blue-mobile"></use>
