--- a/source/photo.html
+++ b/source/photo.html
@@ -189,7 +189,7 @@
         </form>
       </section>
     </main>
-    <footer class="footer">
+    <footer class="footer page__footer">
       <div class="footer__wrapper">
         <svg class="footer__logo logo logo--pink-blue" width="146" height="40" aria-label="Логотип мобильного приложения Pink">
           <use xlink:href="img/sprite.svg#logo-pink-blue-mobile"></use>
