Выстраивает адаптивную сетку элементов header и footer блока photo-content

--- a/source/photo.html
+++ b/source/photo.html
@@ -53,7 +53,7 @@
       <section class="photo-content">
         <h2 class="visually-hidden">Галерея постов</h2>
         <header class="photo-content__header">
-          <p class="photo-content__description">Взгляните на фотографии, которые выкладывают пользователи!<br> Видите, как не хватает ваших?</p>
+          <p class="photo-content__description">Взгляните на фотографии, которые выкладывают пользователи! Видите, как не хватает ваших?</p>
         </header>
         <div class="photo-content__list">
           <article class="photo-content__item post post--device-width">
