--- a/source/photo.html
+++ b/source/photo.html
@@ -73,7 +73,7 @@
               </blockquote>
             </div>
           </article>
-          <div class="wrapper">
+          <div class="photo-content__wrapper">
             <article class="photo-content__item post">
               <h3 class="visually-hidden">Фотопост пользователя нашего приложения</h3>
               <picture class="post__source-photo">
