--- a/source/form.html
+++ b/source/form.html
@@ -44,12 +44,12 @@
     <main class="main">
       <h1 class="visually-hidden">Конкурс мобильного приложения Pink</h1>
       <section class="intro-inner main__intro-inner">
-        <h2 class="intro-inner__title">Конкурс на самое безбашенное путешествие с Пинк</h2>
+        <h2 class="intro-inner__title intro-inner__title--width">Конкурс на самое безбашенное путешествие с Пинк</h2>
       </section>
       <section class="competition">
         <h2 class="visually-hidden">Форма для участия в конкурсе</h2>
         <header class="competition__header">
-          <p class="competition__description">Поделитесь своей историей и получите шанс выиграть ценный приз — 1000 миль на вашу бонусную карту!</p>
+          <p class="competition__description">Поделитесь своей историей и получите шанс выиграть ценный приз — 1000 миль на вашу бонусную карту! <span class="competition__mobile-hidden">Пожалуйста, заполните форму ниже:</span></p>
         </header>
         <form class="form" action="https://echo.htmlacademy.ru" method="POST">
           <fieldset class="form__fieldset data">
