Выстраивает адаптивную сетку блока data и раставляет значения order

--- a/source/form.html
+++ b/source/form.html
@@ -52,7 +52,7 @@
           <p class="competition__description">Поделитесь своей историей и получите шанс выиграть ценный приз — 1000 миль на вашу бонусную карту! <span class="competition__mobile-hidden">Пожалуйста, заполните форму ниже:</span></p>
         </header>
         <form class="form" action="https://echo.htmlacademy.ru" method="POST">
-          <fieldset class="form__fieldset data">
+          <fieldset class="form__fieldset form__fieldset--order-first data">
             <div class="wrapper">
               <h3 class="form__legend form__legend--hidden">Персональные данные</h3>
               <ul class="form__list data__list">
@@ -102,7 +102,7 @@
               </ul>
             </div>
           </fieldset>
-          <fieldset class="form__fieldset data">
+          <fieldset class="form__fieldset form__fieldset--order-third data">
             <div class="wrapper">
               <h3 class="form__legend form__legend--hidden">Контактные данные</h3>
               <ul class="form__list data__list">
@@ -117,7 +117,7 @@
               </ul>
             </div>
           </fieldset>
-          <fieldset class="form__fieldset form__fieldset--background-color">
+          <fieldset class="form__fieldset form__fieldset--background-color form__fieldset--order-second">
             <div class="wrapper">
               <h3 class="form__legend">С каким приложением путешествовали?</h3>
               <ul class="form__list">
