--- a/source/form.html
+++ b/source/form.html
@@ -17,12 +17,16 @@
             </svg>
           </a>
           <button class="menu-burger" type="button" aria-label="Кнопка открытия выпадающего меню">
-            <svg class="menu-burger__icon" width="49" height="24"><use xlink:href="img/sprite.svg#icon-menu-burger"></use></svg>
+            <svg class="menu-burger__icon" width="49" height="24">
+              <use xlink:href="img/sprite.svg#icon-menu-burger"></use>
+            </svg>
           </button>
         </div>
         <nav class="main-nav">
           <button class="main-nav__close" type="button" aria-label="Кнопка закрытия выпадающего меню">
-            <svg class="main-nav__close-icon" width="24" height="24"><use xlink:href="img/sprite.svg#icon-menu-cross"></use></svg>
+            <svg class="main-nav__close-icon" width="24" height="24">
+              <use xlink:href="img/sprite.svg#icon-menu-cross"></use>
+            </svg>
           </button>
           <ul class="main-nav__list menu-list">
             <li class="menu-list__item">
@@ -49,12 +53,14 @@
       <section class="competition">
         <h2 class="visually-hidden">Форма для участия в конкурсе</h2>
         <header class="competition__header">
-          <p class="competition__description">Поделитесь своей историей и получите шанс выиграть ценный приз — 1000 миль на вашу бонусную карту! <span class="competition__mobile-hidden">Пожалуйста, заполните форму ниже:</span></p>
+          <p class="competition__description">Поделитесь своей историей и получите шанс выиграть ценный приз — 1000 миль на вашу бонусную карту!
+            <span class="competition__mobile-hidden">Пожалуйста, заполните форму ниже:</span>
+          </p>
         </header>
         <form class="form" action="https://echo.htmlacademy.ru" method="POST">
           <fieldset class="form__fieldset form__fieldset--order-first data">
+            <legend class="form__legend form__legend--hidden">Персональные данные</legend>
             <div class="wrapper">
-              <h3 class="form__legend form__legend--hidden">Персональные данные</h3>
               <ul class="form__list data__list">
                 <li class="data__item">
                   <label class="data__label" for="user-surname">Фамилия:</label>
@@ -72,8 +78,8 @@
             </div>
           </fieldset>
           <fieldset class="form__fieldset form__fieldset--background-color">
+            <legend class="form__legend">Ваши безбашенные достижения в путешествии</legend>
             <div class="wrapper">
-              <h3 class="form__legend">Ваши безбашенные<br> достижения в путешествии</h3>
               <ul class="form__list">
                 <li class="form__item">
                   <input class="visually-hidden" id="first-achievement" type="checkbox" name="first-achievement" checked>
@@ -103,8 +109,8 @@
             </div>
           </fieldset>
           <fieldset class="form__fieldset form__fieldset--order-third data">
+            <legend class="form__legend form__legend--hidden">Контактные данные</legend>
             <div class="wrapper">
-              <h3 class="form__legend form__legend--hidden">Контактные данные</h3>
               <ul class="form__list data__list">
                 <li class="data__item">
                   <label class="data__label" for="user-phone">Номер телефона</label>
@@ -118,8 +124,8 @@
             </div>
           </fieldset>
           <fieldset class="form__fieldset form__fieldset--background-color form__fieldset--order-second">
+            <legend class="form__legend">С каким приложением путешествовали?</legend>
             <div class="wrapper">
-              <h3 class="form__legend">С каким приложением путешествовали?</h3>
               <ul class="form__list">
                 <li class="form__item">
                   <input class="visually-hidden" id="version-ios" type="radio" name="version-app" checked>
@@ -137,8 +143,8 @@
             </div>
           </fieldset>
           <fieldset class="form__fieldset">
+            <legend class="form__legend form__legend--margin">Опишите свои эмоции</legend>
             <div class="wrapper">
-              <h3 class="form__legend form__legend--margin">Опишите свои эмоции</h3>
               <label class="visually-hidden" for="user-comment">Комментарии о нашем приложении</label>
               <textarea class="form__textarea" id="user-comment" name="comment" placeholder="Можно прям в красках, не стесняясь в выражениях"></textarea>
             </div>
@@ -148,13 +154,16 @@
           </p>
         </form>
         <footer class="competition__footer">
-          <p class="competition__description"><span class="competition__description-simbol">*</span> — обязательные поля</p>
+          <p class="competition__description">
+            <span class="competition__description-simbol">*</span> — обязательные поля</p>
         </footer>
       </section>
     </main>
     <footer class="footer page__footer">
       <div class="footer__wrapper">
-        <svg class="footer__logo logo logo--pink-blue" width="146" height="40" aria-label="Логотип мобильного приложения Pink"><use xlink:href="img/sprite.svg#logo-pink-blue-mobile"></use></svg>
+        <svg class="footer__logo logo logo--pink-blue" width="146" height="40" aria-label="Логотип мобильного приложения Pink">
+          <use xlink:href="img/sprite.svg#logo-pink-blue-mobile"></use>
+        </svg>
         <ul class="footer__list social-list">
           <li class="social-list__item">
             <a class="social-list__link social-list__link--twitter" href="#" aria-label="Мы в твиттере">
@@ -199,13 +208,14 @@
     <section class="modal modal-show">
       <div class="wrapper">
         <h2 class="modal__title">Ваша заявка отправлена</h2>
-        <p class="modal__description">Спасибо за ваше участие, ваша заявка уже поступила к нам. В ближайшее время мы рассмотрим ее<br> и оповестим вас.</p>
+        <p class="modal__description">Спасибо за ваше участие, ваша заявка уже поступила к нам. В ближайшее время мы рассмотрим ее
+          <br> и оповестим вас.</p>
       </div>
       <div class="modal__button">
         <p class="wrapper">
           <button class="button" type="button">Закрыть окно</button>
         </p>
       </div>
-      </section>
+    </section>
   </body>
 </html>
