--- a/source/form.html
+++ b/source/form.html
@@ -58,7 +58,7 @@
           </p>
         </header>
         <form class="form" action="https://echo.htmlacademy.ru" method="POST">
-          <fieldset class="form__fieldset form__fieldset--border-none form__fieldset--order-first data">
+          <fieldset class="form__fieldset form__fieldset--user data">
             <legend class="visually-hidden">Персональные данные</legend>
             <ul class="form__list">
               <li class="data__item">
@@ -75,36 +75,36 @@
               </li>
             </ul>
           </fieldset>
-          <fieldset class="form__fieldset">
+          <fieldset class="form__fieldset form__fieldset--achievement">
             <legend class="form__legend">Ваши безбашенные достижения в путешествии</legend>
-            <ul class="form__list">
+            <ul class="form__list form__list--achievement">
               <li class="form__item">
                 <input class="visually-hidden" id="first-achievement" type="checkbox" name="first-achievement" checked>
                 <label class="form__label form__label--checkbox" for="first-achievement">Сделал селфи с акулой</label>
               </li>
-              <li class="form__item">
+              <li class="form__item form__item--achievement">
                 <input class="visually-hidden" id="second-achievement" type="checkbox" name="second-achievement" checked>
                 <label class="form__label form__label--checkbox" for="second-achievement">Обгорел на пляже</label>
               </li>
-              <li class="form__item">
+              <li class="form__item form__item--achievement">
                 <input class="visually-hidden" id="third-achievement" type="checkbox" name="third-achievement">
                 <label class="form__label form__label--checkbox" for="third-achievement">Видел Чака Норриса</label>
               </li>
-              <li class="form__item">
+              <li class="form__item form__item--achievement">
                 <input class="visually-hidden" id="fourth-achievement" type="checkbox" name="fourth-achievement">
                 <label class="form__label form__label--checkbox" for="fourth-achievement">Накупил сувениров</label>
               </li>
-              <li class="form__item">
+              <li class="form__item form__item--achievement">
                 <input class="visually-hidden" id="fifth-achievement" type="checkbox" name="fifth-achievement" checked>
                 <label class="form__label form__label--checkbox" for="fifth-achievement">Удержал башню</label>
               </li>
-              <li class="form__item">
+              <li class="form__item form__item--achievement">
                 <input class="visually-hidden" id="sixth-achievement" type="checkbox" name="sixth-achievement">
                 <label class="form__label form__label--checkbox" for="sixth-achievement">Разгромил отель</label>
               </li>
             </ul>
           </fieldset>
-          <fieldset class="form__fieldset form__fieldset--order-third data">
+          <fieldset class="form__fieldset form__fieldset--contacts data">
             <legend class="form__legend form__legend--hidden">Контактная информация</legend>
             <ul class="form__list data__list">
               <li class="data__item data__item--position">
@@ -117,7 +117,7 @@
               </li>
             </ul>
           </fieldset>
-          <fieldset class="form__fieldset form__fieldset--order-second">
+          <fieldset class="form__fieldset form__fieldset--app">
             <legend class="form__legend">С каким приложением путешествовали?</legend>
             <ul class="form__list">
               <li class="form__item">
@@ -134,7 +134,7 @@
               </li>
             </ul>
           </fieldset>
-          <fieldset class="form__fieldset">
+          <fieldset class="form__fieldset form__fieldset--comment">
             <legend class="form__legend form__legend--margin">Опишите свои эмоции</legend>
             <label class="visually-hidden" for="user-comment">Комментарии о нашем приложении</label>
             <textarea class="form__textarea" id="user-comment" name="comment" placeholder="Можно прям в красках, не стесняясь в выражениях"></textarea>
