--- a/source/form.html
+++ b/source/form.html
@@ -185,7 +185,7 @@
       </div>
     </footer>
     <section class="modal modal-error">
-      <div class="wrapper">
+      <div class="modal__wrapper">
         <h2 class="visually-hidden">Ошибка при отправке формы</h2>
         <p class="modal__title">Что-то пошло не так!</p>
         <p class="modal__description">Проверьте поля, выделенные красным, скорее всего вы забыли их заполнить</p>
@@ -193,15 +193,10 @@
       </div>
     </section>
     <section class="modal modal-show">
-      <div class="wrapper">
+      <div class="modal__wrapper">
         <h2 class="modal__title">Ваша заявка отправлена</h2>
-        <p class="modal__description">Спасибо за ваше участие, ваша заявка уже поступила к нам. В ближайшее время мы рассмотрим ее
-          <br> и оповестим вас.</p>
-      </div>
-      <div class="modal__button">
-        <p class="wrapper">
-          <button class="button" type="button">Закрыть окно</button>
-        </p>
+        <p class="modal__description">Спасибо за ваше участие, ваша заявка уже поступила к нам. В ближайшее время мы рассмотрим ее и оповестим вас.</p>
+        <button class="button button--margin" type="button">Закрыть окно</button>
       </div>
     </section>
   </body>
