--- a/source/form.html
+++ b/source/form.html
@@ -193,10 +193,10 @@
       </div>
     </section>
     <section class="modal modal-show">
-      <div class="modal__wrapper">
+      <div class="modal__wrapper modal__wrapper--show">
         <h2 class="modal__title">Ваша заявка отправлена</h2>
         <p class="modal__description">Спасибо за ваше участие, ваша заявка уже поступила к нам. В ближайшее время мы рассмотрим ее и оповестим вас.</p>
-        <button class="button button--margin" type="button">Закрыть окно</button>
+        <button class="button button--margin button--show" type="button">Закрыть окно</button>
       </div>
     </section>
   </body>
