--- a/source/index.html
+++ b/source/index.html
@@ -48,22 +48,20 @@
       <section class="intro">
         <h2 class="visually-hidden">Где скачать приложение?</h2>
         <article class="intro__download app">
-          <div class="intro__wrapper">
-            <h3 class="visually-hidden">Способы скачать приложение</h3>
-            <a class="app__link link" href="#">Скачать приложение</a>
-            <ul class="app__list store-list">
-              <li class="store-list__item">
-                <a class="store-list__link" href="#" aria-label="iTunes"></a>
-              </li>
-              <li class="store-list__item">
-                <a class="store-list__link" href="#" aria-label="Google Play"></a>
-              </li>
-              <li class="store-list__item">
-                <a class="store-list__link" href="#" aria-label="Microsoft Store"></a>
-              </li>
-            </ul>
-            <p class="app__description">Доступно для iPhone, iPad, Android, Windows Phone, OS X, Windows 8</p>
-          </div>
+          <h3 class="visually-hidden">Способы скачать приложение</h3>
+          <a class="app__link link" href="#">Скачать приложение</a>
+          <ul class="app__list store-list">
+            <li class="store-list__item">
+              <a class="store-list__link" href="#" aria-label="iTunes"></a>
+            </li>
+            <li class="store-list__item">
+              <a class="store-list__link" href="#" aria-label="Google Play"></a>
+            </li>
+            <li class="store-list__item">
+              <a class="store-list__link" href="#" aria-label="Microsoft Store"></a>
+            </li>
+          </ul>
+          <p class="app__description">Доступно для iPhone, iPad, Android, Windows Phone, OS X, Windows 8</p>
         </article>
       </section>
       <section class="information">
@@ -90,7 +88,8 @@
           <footer class="information__footer effect">
             <div class="effect__wrapper">
               <p class="effect__title">Эффект на 24 часа!</p>
-              <p class="information__description">Британские ученые провели исследования и доказали, что положительный эффект от использования приложения длится целые сутки!</p>
+              <p class="information__description">Британские ученые провели исследования и доказали, что положительный эффект от использования приложения длится
+                целые сутки!</p>
               <a class="effect__link" href="#">Узнать больше об исследовании</a>
             </div>
           </footer>
@@ -103,17 +102,20 @@
             <blockquote class="reviews__item reviews__item--active slider__item">
               <p class="reviews__author-info">25 лет, водитель трамвая</p>
               <cite class="reviews__author-name">Николай Петров</cite>
-              <p class="reviews__quote">«Это приложение перевернуло мой мир и позволило по-новому взглянуть на привычные серые вещи! А еще я познакомился со своей будущей женой в комментариях к выложенной фотографии!»</p>
+              <p class="reviews__quote">«Это приложение перевернуло мой мир и позволило по-новому взглянуть на привычные серые вещи! А еще я познакомился
+                со своей будущей женой в комментариях к выложенной фотографии!»</p>
             </blockquote>
             <blockquote class="reviews__item slider__item">
               <p class="reviews__author-info">25 лет, водитель трамвая</p>
               <cite class="reviews__author-name">Николай Петров</cite>
-              <p class="reviews__quote">«Это приложение перевернуло мой мир и позволило по-новому взглянуть на привычные серые вещи! А еще я познакомился со своей будущей женой в комментариях к выложенной фотографии!»</p>
+              <p class="reviews__quote">«Это приложение перевернуло мой мир и позволило по-новому взглянуть на привычные серые вещи! А еще я познакомился
+                со своей будущей женой в комментариях к выложенной фотографии!»</p>
             </blockquote>
             <blockquote class="reviews__item slider__item">
               <p class="reviews__author-info">25 лет, водитель трамвая</p>
               <cite class="reviews__author-name">Николай Петров</cite>
-              <p class="reviews__quote">«Это приложение перевернуло мой мир и позволило по-новому взглянуть на привычные серые вещи! А еще я познакомился со своей будущей женой в комментариях к выложенной фотографии!»</p>
+              <p class="reviews__quote">«Это приложение перевернуло мой мир и позволило по-новому взглянуть на привычные серые вещи! А еще я познакомился
+                со своей будущей женой в комментариях к выложенной фотографии!»</p>
             </blockquote>
           </div>
           <p class="reviews__toggles slider__toggles">
@@ -184,7 +186,8 @@
             </li>
             <li class="contacts__item">
               <h3 class="contacts__title">Приезжайте в гости:</h3>
-              <address class="contacts__link">ул. Большая<br> Конюшенная, 19/8</address>
+              <address class="contacts__link">ул. Большая
+                <br> Конюшенная, 19/8</address>
             </li>
           </ul>
         </div>
