--- a/source/form.html
+++ b/source/form.html
@@ -9,19 +9,17 @@
   </head>
   <body class="page">
     <header class="header">
-      <div class="header__wrapper-desktop">
-        <div class="header__wrapper">
-          <a class="header__logo-link" href="index.html" aria-label="Ссылка на главную страницу Pink">
-            <svg class="header__logo logo logo--header-color" width="75" height="23" aria-label="Логотип мобильного приложения Pink">
-              <use xlink:href="img/sprite.svg#logo-pink-white-mobile"></use>
-            </svg>
-          </a>
-          <button class="menu-burger" type="button" aria-label="Кнопка открытия выпадающего меню">
-            <svg class="menu-burger__icon" width="49" height="24">
-              <use xlink:href="img/sprite.svg#icon-menu-burger"></use>
-            </svg>
-          </button>
-        </div>
+      <div class="header__wrapper">
+        <a class="header__logo-link" href="index.html" aria-label="Ссылка на главную страницу Pink">
+          <svg class="header__logo logo logo--header-color" width="75" height="23" aria-label="Логотип мобильного приложения Pink">
+            <use xlink:href="img/sprite.svg#logo-pink-white-mobile"></use>
+          </svg>
+        </a>
+        <button class="menu-burger" type="button" aria-label="Кнопка открытия выпадающего меню">
+          <svg class="menu-burger__icon" width="49" height="24">
+            <use xlink:href="img/sprite.svg#icon-menu-burger"></use>
+          </svg>
+        </button>
         <nav class="main-nav">
           <button class="main-nav__close" type="button" aria-label="Кнопка закрытия выпадающего меню">
             <svg class="main-nav__close-icon" width="24" height="24">
@@ -54,7 +52,7 @@
         <h2 class="visually-hidden">Форма для участия в конкурсе</h2>
         <header class="competition__header">
           <p class="competition__description">Поделитесь своей историей и получите шанс выиграть ценный приз — 1000 миль на вашу бонусную карту!
-            <span class="competition__mobile-hidden">Пожалуйста, заполните форму ниже:</span>
+            <span class="competition__hidden">Пожалуйста, заполните форму ниже:</span>
           </p>
         </header>
         <form class="form" action="https://echo.htmlacademy.ru" method="POST">
