--- a/source/index.html
+++ b/source/index.html
@@ -9,17 +9,15 @@
   </head>
   <body class="page">
     <header class="header">
-      <div class="header__wrapper-desktop">
-        <div class="header__wrapper">
-          <svg class="header__logo logo logo--header-color" width="75" height="23" aria-label="Логотип мобильного приложения Pink">
-            <use xlink:href="img/sprite.svg#logo-pink-white-mobile"></use>
+      <div class="header__wrapper">
+        <svg class="header__logo logo logo--header-color" width="75" height="23" aria-label="Логотип мобильного приложения Pink">
+          <use xlink:href="img/sprite.svg#logo-pink-white-mobile"></use>
+        </svg>
+        <button class="menu-burger" type="button" aria-label="Кнопка открытия выпадающего меню">
+          <svg class="menu-burger__icon" width="49" height="24">
+            <use xlink:href="img/sprite.svg#icon-menu-burger"></use>
           </svg>
-          <button class="menu-burger" type="button" aria-label="Кнопка открытия выпадающего меню">
-            <svg class="menu-burger__icon" width="49" height="24">
-              <use xlink:href="img/sprite.svg#icon-menu-burger"></use>
-            </svg>
-          </button>
-        </div>
+        </button>
         <nav class="main-nav">
           <button class="main-nav__close" type="button" aria-label="Кнопка закрытия выпадающего меню">
             <svg class="main-nav__close-icon" width="24" height="24">
@@ -198,7 +196,7 @@
         <img class="map__img" src="img/bg-map-mobile@1x.png" width="320" height="645" alt="Наш офис находится по адресу г.Санкт-Петербург, ул. Большая Конюшенная, д.19/8 ">
       </article>
     </main>
-    <footer class="footer footer--mobile-hidden page__footer">
+    <footer class="footer footer--hidden page__footer">
       <div class="footer__wrapper">
         <svg class="footer__logo logo logo--pink-blue" width="146" height="40" aria-label="Логотип мобильного приложения Pink">
           <use xlink:href="img/sprite.svg#logo-pink-blue-mobile"></use>
