Корректирует применение блока wrapper

--- a/source/index.html
+++ b/source/index.html
@@ -197,7 +197,7 @@
       </article>
     </main>
     <footer class="footer footer--hidden page__footer">
-      <div class="footer__wrapper">
+      <div class="footer__wrapper wrapper">
         <svg class="footer__logo logo logo--pink-blue" width="146" height="40" aria-label="Логотип мобильного приложения Pink">
           <use xlink:href="img/sprite.svg#logo-pink-blue-mobile"></use>
         </svg>
