--- a/source/photo.html
+++ b/source/photo.html
@@ -71,7 +71,7 @@
               </blockquote>
             </div>
           </article>
-          <div class="photo-content__wrapper">
+          <div class="photo-content__wrapper wrapper">
             <article class="photo-content__item post">
               <h3 class="visually-hidden">Фотопост пользователя нашего приложения</h3>
               <picture class="post__source-photo">
@@ -165,7 +165,7 @@
       <section class="photo-editor">
         <h2 class="visually-hidden">Фоторедактор с возможностью запостить свою фотографию</h2>
         <form class="photo-editor__form" action="https://echo.htmlacademy.ru" method="POST">
-          <div class="photo-editor__wrapper">
+          <div class="photo-editor__wrapper wrapper">
             <picture class="photo-editor__source-photo">
               <!-- <source media="()" srcset="">
                   <source media="()" srcset=""> -->
@@ -192,7 +192,7 @@
       </section>
     </main>
     <footer class="footer page__footer">
-      <div class="footer__wrapper">
+      <div class="footer__wrapper wrapper">
         <svg class="footer__logo logo logo--pink-blue" width="146" height="40" aria-label="Логотип мобильного приложения Pink">
           <use xlink:href="img/sprite.svg#logo-pink-blue-mobile"></use>
         </svg>
