--- a/source/form.html
+++ b/source/form.html
@@ -145,7 +145,7 @@
       </section>
     </main>
     <footer class="footer page__footer">
-      <div class="footer__wrapper">
+      <div class="footer__wrapper wrapper">
         <svg class="footer__logo logo logo--pink-blue" width="146" height="40" aria-label="Логотип мобильного приложения Pink">
           <use xlink:href="img/sprite.svg#logo-pink-blue-mobile"></use>
         </svg>
