Реализует работоспособность выпадающего меню без JavaScript

--- a/source/index.html
+++ b/source/index.html
@@ -9,7 +9,7 @@
   </head>
   <body class="page">
     <header class="header">
-      <nav class="main-nav main-nav--closed">
+      <nav class="main-nav main-nav--closed main-nav--nojs">
         <div class="main-nav__menu">
           <svg class="header__logo logo logo--header-color" width="75" height="23" aria-label="Логотип мобильного приложения Pink">
             <use xlink:href="img/sprite.svg#logo-pink-white-mobile"></use>
