--- a/source/photo.html
+++ b/source/photo.html
@@ -10,7 +10,7 @@
   <body class="page">
     <header class="header">
       <div class="header__wrapper">
-        <nav class="main-nav main-nav--closed">
+        <nav class="main-nav main-nav--closed main-nav--nojs">
           <div class="main-nav__menu">
             <a class="header__logo-link" href="index.html" aria-label="Ссылка на главную страницу Pink">
               <svg class="header__logo logo logo--header-color" width="75" height="23" aria-label="Логотип мобильного приложения Pink">
@@ -215,5 +215,6 @@
         </div>
       </div>
     </footer>
+    <script src="js/main-nav.js"></script>
   </body>
 </html>
