Добавляет базовую стилизацию для планшетной версии

--- a/source/index.html
+++ b/source/index.html
@@ -38,6 +38,7 @@
         <h2 class="visually-hidden">Где скачать приложение?</h2>
         <article class="intro__download app">
           <h3 class="visually-hidden">Способы скачать приложение</h3>
+          <p class="app__slogan">Взгляните на жизнь иначе!</p>
           <a class="app__link link" href="#">Скачать приложение</a>
           <ul class="app__list store-list">
             <li class="store-list__item">
@@ -58,7 +59,7 @@
           <h2 class="visually-hidden">Информация о приложении</h2>
           <header class="information__header">
             <p class="information__text">Устали от серости мегаполиса?</p>
-            <p class="information__text">Нам есть, что вам предложить!</p>
+            <p class="information__text information__text--padding">Нам есть, что вам предложить!</p>
           </header>
           <ul class="information__list">
             <li class="information__item">
