--- a/source/photo.html
+++ b/source/photo.html
@@ -164,9 +164,17 @@
                   <button class="photo-editor__toggle photo-editor__toggle--fill" type="button" aria-label="Выбор цвета фотографии"></button>
                   <button class="photo-editor__toggle photo-editor__toggle--contrast" type="button" aria-label="Выбор контрастности фотографии"></button>
                 </div>
-                <div class="photo-editor__scale">
-                  <div class="photo-editor__slider"></div>
-                </div>
+                <ul class="photo-editor__list scale">
+                  <li class="photo-editor__item scale__slider">
+                    <div class="scale__toggle"></div>
+                  </li>
+                  <li class="photo-editor__item scale__slider">
+                    <div class="scale__toggle"></div>
+                  </li>
+                  <li class="photo-editor__item scale__slider">
+                    <div class="scale__toggle"></div>
+                  </li>
+                </ul>
               </div>
               <p class="photo-editor__buttons buttons">
                 <button class="buttons__item buttons__item--submit" type="submit">Запостить</button>
