Добавляет подписи шкалам и ползункам для читалок

--- a/source/photo.html
+++ b/source/photo.html
@@ -165,14 +165,14 @@
                   <button class="photo-editor__toggle photo-editor__toggle--contrast" type="button" aria-label="Выбор контрастности фотографии"></button>
                 </div>
                 <ul class="photo-editor__list scale">
-                  <li class="photo-editor__item scale__slider">
-                    <div class="scale__toggle"></div>
+                  <li class="photo-editor__item scale__slider" aria-label="Шкала кадрирования">
+                    <div class="scale__toggle"><span class="visually-hidden">Ползунок шкалы кадрирования</span></div>
                   </li>
-                  <li class="photo-editor__item scale__slider">
-                    <div class="scale__toggle"></div>
+                  <li class="photo-editor__item scale__slider" aria-label="Шкала цвета">
+                    <div class="scale__toggle"><span class="visually-hidden">Ползунок шкалы цвета</span></div>
                   </li>
-                  <li class="photo-editor__item scale__slider">
-                    <div class="scale__toggle"></div>
+                  <li class="photo-editor__item scale__slider" aria-label="Шкала контрастности">
+                    <div class="scale__toggle"><span class="visually-hidden">Ползунок шкалы контрастности</span></div>
                   </li>
                 </ul>
               </div>
