Добавляет стилизацию блока store-list

--- a/source/index.html
+++ b/source/index.html
@@ -42,13 +42,25 @@
           <a class="app__link link" href="#">Скачать приложение</a>
           <ul class="app__list store-list">
             <li class="store-list__item">
-              <a class="store-list__link" href="#" aria-label="iTunes"></a>
+              <a class="store-list__link" href="#" aria-label="Apple">
+                <svg class="store-list__logo" width="47" height="56" aria-label="Логотип Apple">
+                  <use xlink:href="img/sprite.svg#logo-apple"></use>
+                </svg>
+              </a>
             </li>
             <li class="store-list__item">
-              <a class="store-list__link" href="#" aria-label="Google Play"></a>
+              <a class="store-list__link" href="#" aria-label="Android">
+                <svg class="store-list__logo" width="45" height="45" aria-label="Логотип Android">
+                  <use xlink:href="img/sprite.svg#logo-android"></use>
+                </svg>
+              </a>
             </li>
             <li class="store-list__item">
-              <a class="store-list__link" href="#" aria-label="Microsoft Store"></a>
+              <a class="store-list__link" href="#" aria-label="Windows Phone">
+                <svg class="store-list__logo" width="44" height="41" aria-label="Логотип Windows Phone">
+                  <use xlink:href="img/sprite.svg#logo-microsoft"></use>
+                </svg>
+              </a>
             </li>
           </ul>
           <p class="app__description">Доступно для iPhone, iPad, Android, Windows Phone, OS X, Windows 8</p>
