Приводит блоки slider, reviews в соответствие с PP для мобильной версии

--- a/source/index.html
+++ b/source/index.html
@@ -128,11 +128,17 @@
               <p class="reviews__quote">«Это приложение перевернуло мой мир и позволило по-новому взглянуть на привычные серые вещи! А еще я познакомился со своей будущей женой в комментариях к выложенной фотографии!»</p>
             </blockquote>
           </div>
-          <p class="reviews__toggles slider__toggles">
-            <button class="slider__toggle slider__toggle--active" type="button" aria-label="Первый переключатель"></button>
-            <button class="slider__toggle" type="button" aria-label="Второй переключатель"></button>
-            <button class="slider__toggle" type="button" aria-label="Третий переключатель"></button>
-          </p>
+          <div class="reviews__bullets slider__bullets">
+            <button class="slider__button" type="button" aria-label="Кнопка переключения на первый слайд">
+              <span class="slider__bullet slider__bullet--active" aria-label="Первый переключатель"></span>
+            </button>
+            <button class="slider__button" type="button" aria-label="Кнопка переключения на второй слайд">
+              <span class="slider__bullet" aria-label="Второй переключатель"></span>
+            </button>
+            <button class="slider__button" type="button" aria-label="Кнопка переключения на третий слайд">
+              <span class="slider__bullet" aria-label="Третий переключатель"></span>
+            </button>
+          </div>
         </div>
       </section>
       <section class="price main__price">
@@ -192,11 +198,17 @@
               </td>
             </tr>
           </table>
-          <p class="price__toggles slider__toggles">
-            <button class="slider__toggle" type="button" aria-label="Первый переключатель"></button>
-            <button class="slider__toggle slider__toggle--active" type="button" aria-label="Второй переключатель"></button>
-            <button class="slider__toggle" type="button" aria-label="Третий переключатель"></button>
-          </p>
+          <div class="reviews__bullets slider__bullets">
+            <button class="slider__button" type="button" aria-label="Кнопка переключения на первый слайд">
+              <span class="slider__bullet" aria-label="Первый переключатель"></span>
+            </button>
+            <button class="slider__button" type="button" aria-label="Кнопка переключения на второй слайд">
+              <span class="slider__bullet slider__bullet--active" aria-label="Второй переключатель"></span>
+            </button>
+            <button class="slider__button" type="button" aria-label="Кнопка переключения на третий слайд">
+              <span class="slider__bullet" aria-label="Третий переключатель"></span>
+            </button>
+          </div>
         </div>
       </section>
       <section class="contacts main__contacts">
